# Insurance-Fraud-RBA-MFA-System

backend/: .gitignore  pyproject.toml
backend/app/: .env.example  config.py  database.py  main.py
backend/app/api/: __init__.py  admin.py  auth.py  claims.py  deps.py  fraud.py  mfa.py  risk.py
backend/app/core/: constants.py
backend/app/middleware/: __init__.py  auth.py  logging.py  rate_limit.py
backend/app/ml/: __init__.py  explainer.py  fraud_predictor.py  model_loader.py  risk_predictor.py
backend/app/models/: __init__.py  audit_log.py  authentication_event.py  claim.py  device.py  fraud_detection.py  risk_score.py  transaction_context.py  user.py
backend/app/schemas/: __init__.py  admin.py  auth.py  claim.py  fraud.py  risk.py  user.py
backend/app/services/: __init__.py  auth_service.py  claim_service.py  decision_engine.py  feature_engineering.py  fraud_service.py  mfa_service.py  risk_service.py
backend/app/utils/: __init__.py  device_fingerprint.py  helpers.py  security.py  validators.py
backend/models/: fraud_classifier.pkl  fraud_label_encoders.pkl  fraud_scaler.pkl  fraud_shap_explainer.pkl  fraud_smote.pkl  isolation_forest.pkl  risk_label_encoders.pkl  risk_model.pkl  risk_scaler.pkl
ml/: .gitignore  main.py  pyproject.toml
ml/artifacts/metadata/: fraud_feature_names.json  fraud_model_metadata.json  risk_feature_names.json  risk_model_metadata.json  shap_metadata.json
ml/data/synthetic/: claims.csv  data_summary.json  (+2 more)
ml/notebooks/: 01_exploratory_data_analysis.ipynb
ml/scripts/: generate_synthetic_data.py  train_risk_model.py
(+39 files in other folders)
